完成物质变动表

--- a/TAF.Web/Views/HisStock/_QueryStockList.cshtml
+++ b/TAF.Web/Views/HisStock/_QueryStockList.cshtml
@@ -46,10 +46,10 @@
                                     <th>
                                         <div class="row">
                                             <div class="col-sm-6">
-                                                <input type="text" class="form-control" placeholder="DateFrom" v-model="queryEntity.dateFrom" id="dateFrom" readonly="readonly" />
+                                                <input type="text" class="form-control" placeholder="起" v-model="queryEntity.dateFrom" id="dateFrom" readonly="readonly" />
                                             </div>
                                             <div class="col-sm-6">
-                                                <input type="text" class="form-control" placeholder="DateTo" v-model="queryEntity.dateTo" id="dateTo" readonly="readonly" />
+                                                <input type="text" class="form-control" placeholder="止" v-model="queryEntity.dateTo" id="dateTo" readonly="readonly" />
                                             </div>
                                         </div>
                                     </th>
