--- a/TAF.Web/Views/ActualOutlay/_ActualOutlayIndex.cshtml
+++ b/TAF.Web/Views/ActualOutlay/_ActualOutlayIndex.cshtml
@@ -16,7 +16,7 @@
     <div class="col-xs-5 col-md-5">
         <div class="widget">
             <div class="widget-header bordered-bottom bordered-danger">
-                <span class="widget-caption">年度预算支出表</span>
+                <span class="widget-caption">年初预算支出表</span>
             </div>
             <div class="widget-body">
                 <div class="table-toolbar">
