--- a/TAF.Web/Views/BudgetOutlay/_BudgetOutlayIndex3.cshtml
+++ b/TAF.Web/Views/BudgetOutlay/_BudgetOutlayIndex3.cshtml
@@ -158,7 +158,7 @@
     </div>
 </div>
 <script src="~/assets/js/liteuploader.js"></script>
-<script src="~/Scripts/budgetOutlay.js"></script>
+<script src="~/Scripts/budgetOutlay3.js"></script>
 
 
 
