--- a/TAF.Web/Views/BudgetReceipt/_BudgetReceiptIndex.cshtml
+++ b/TAF.Web/Views/BudgetReceipt/_BudgetReceiptIndex.cshtml
@@ -3,153 +3,155 @@
     <div class=" col-md-12">
         <div class="widget">
             <div class="widget-header bordered-bottom bordered-primary">
-                <span class="widget-caption">年度预算收入</span>
+                <span class="widget-caption">年初预算收入</span>
             </div>
             <div class="widget-body">
                 <div class="table-toolbar">
                     <div class="table-toolbar">
-                        <input type="file" name="fileUpload" id="fileUpload" class="fileUpload" title="上传年度预算收入" />
+                        <input type="file" name="fileUpload" id="fileUpload" class="fileUpload" title="上传年初预算收入" />
                     </div>
 
 
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <table class="table table-striped table-hover table-bordered " width="2400px">
-                            <thead>
-                            <tr role="row">
-                                <th style="width: 100px;" rowspan="4">
-                                    科目代码
-                                </th>
-                                <th style="width: 100px;" rowspan="4">
-                                    科目名称
-                                </th>
-                                <th style="width: 2100px;" colspan="22">
-                                    收入(万元)
-                                </th>
-                                <th style="width: 100px;" rowspan="4">
-                                    操作
-                                </th>
-                            </tr>
-                            <tr role="row">
-                                <th style="width: 100px;" rowspan="3">
-                                    合计
-                                </th>
-                                <th style="width: 700px;" colspan="4">
-                                    向上请领
-                                </th>
-                                <th style="width: 800px;" colspan="8">
-                                    留用经费
-                                </th>
-                                <th style="width: 800px;" colspan="8">
-                                    上年结转
-                                </th>
-                                <th style="width: 100px;" rowspan="3">
-                                    当年预算外收入
-                                </th>
+                        <div class="pre-scrollable">
+                            <table class="table table-striped table-hover table-bordered "  style="width: 2000px">
+                                <thead>
+                                    <tr role="row">
+                                        <th style="width: 100px;" rowspan="4">
+                                            科目代码
+                                        </th>
+                                        <th style="width: 100px;" rowspan="4">
+                                            科目名称
+                                        </th>
+                                        <th style="width: 2100px;" colspan="22">
+                                            收入(万元)
+                                        </th>
+                                        <th style="width: 100px;" rowspan="4">
+                                            操作
+                                        </th>
+                                    </tr>
+                                    <tr role="row">
+                                        <th style="width: 100px;" rowspan="3">
+                                            合计
+                                        </th>
+                                        <th style="width: 700px;" colspan="4">
+                                            向上请领
+                                        </th>
+                                        <th style="width: 800px;" colspan="8">
+                                            留用经费
+                                        </th>
+                                        <th style="width: 800px;" colspan="8">
+                                            上年结转
+                                        </th>
+                                        <th style="width: 100px;" rowspan="3">
+                                            当年预算外收入
+                                        </th>
 
-                            </tr>
-                            <tr role="row">
-                                <th style="width: 100px;" rowspan="2">
-                                    小计
-                                </th>
-                                <th style="width: 100px;" rowspan="2">
-                                    标准经费
-                                </th>
-                                <th style="width: 100px;" colspan="2">
-                                    项目经费
-                                </th>
-                                <th style="width: 100px;" rowspan="2">
-                                    小计
-                                </th>
-                                <th style="width: 100px;" rowspan="2">
-                                    留用党团费弥补
-                                </th>
-                                <th style="width: 100px;" rowspan="2">
-                                    留用租房维修基金弥补
-                                </th>
-                                <th style="width: 100px;" rowspan="2">
-                                    历年预算外结余弥补
-                                </th>
-                                <th style="width: 100px;" rowspan="2">
-                                    历年预算经费结余弥补
-                                </th>
-                                <th style="width: 100px;" rowspan="2">
-                                    当年地方保障经费弥补
-                                </th>
-                                <th style="width: 100px;" rowspan="2">
-                                    当年预算外收入弥补
-                                </th>
-                                <th style="width: 100px;" rowspan="2">
-                                    其他收入弥补
-                                </th>
-                                <th style="width: 100px;" rowspan="2">
-                                    小计
-                                </th>
-                                <th style="width: 100px;" rowspan="2">
-                                    地方专项经费
-                                </th>
-                                <th style="width: 100px;" rowspan="2">
-                                    部局专项经费
-                                </th>
-                                <th style="width: 100px;" rowspan="2">
-                                    历年预算外结余
-                                </th>
-                                <th style="width: 100px;" rowspan="2">
-                                    历年预算经费结余
-                                </th>
-                                <th style="width: 100px;" rowspan="2">
-                                    留用租房维修基金
-                                </th>
-                                <th style="width: 100px;" rowspan="2">
-                                    留用党团费
-                                </th>
-                                <th style="width: 100px;" rowspan="2">
-                                    其他经费
-                                </th>
-                            </tr>
-                            <tr role="row">
-                                <th style="width: 100px;">
-                                    地方下达项目经费
-                                </th>
-                                <th style="width: 100px;">
-                                    部局下达项目经费
-                                </th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr v-for="item in list">
-                                <td>{{item.code}}</td>
-                                <td>{{item.name}}</td>
-                                <td>{{item.total}}</td>
-                                <td>{{item.total1}}</td>
-                                <td>{{item.column1}}</td>
-                                <td>{{item.column21}}</td>
-                                <td>{{item.column22}}</td>
-                                <td>{{item.total3}}</td>
-                                <td>{{item.column31}}</td>
-                                <td>{{item.column32}}</td>
-                                <td>{{item.column33}}</td>
-                                <td>{{item.column34}}</td>
-                                <td>{{item.column35}}</td>
-                                <td>{{item.column36}}</td>
-                                <td>{{item.column37}}</td>
-                                <td>{{item.total4}}</td>
-                                <td>{{item.column41}}</td>
-                                <td>{{item.column42}}</td>
-                                <td>{{item.column43}}</td>
-                                <td>{{item.column44}}</td>
-                                <td>{{item.column45}}</td>
-                                <td>{{item.column46}}</td>
-                                <td>{{item.column47}}</td>
-                                <td>{{item.column5}}</td>
-                                <td>
-                                    <button type="button" class="btn btn-default" data-dismiss="modal" v-on:click="showDetails(item)"> <i class="fa    fa-file-text-o"></i> 明细</button>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
+                                    </tr>
+                                    <tr role="row">
+                                        <th style="width: 100px;" rowspan="2">
+                                            小计
+                                        </th>
+                                        <th style="width: 100px;" rowspan="2">
+                                            标准经费
+                                        </th>
+                                        <th style="width: 100px;" colspan="2">
+                                            项目经费
+                                        </th>
+                                        <th style="width: 100px;" rowspan="2">
+                                            小计
+                                        </th>
+                                        <th style="width: 100px;" rowspan="2">
+                                            留用党团费弥补
+                                        </th>
+                                        <th style="width: 100px;" rowspan="2">
+                                            留用租房维修基金弥补
+                                        </th>
+                                        <th style="width: 100px;" rowspan="2">
+                                            历年预算外结余弥补
+                                        </th>
+                                        <th style="width: 100px;" rowspan="2">
+                                            历年预算经费结余弥补
+                                        </th>
+                                        <th style="width: 100px;" rowspan="2">
+                                            当年地方保障经费弥补
+                                        </th>
+                                        <th style="width: 100px;" rowspan="2">
+                                            当年预算外收入弥补
+                                        </th>
+                                        <th style="width: 100px;" rowspan="2">
+                                            其他收入弥补
+                                        </th>
+                                        <th style="width: 100px;" rowspan="2">
+                                            小计
+                                        </th>
+                                        <th style="width: 100px;" rowspan="2">
+                                            地方专项经费
+                                        </th>
+                                        <th style="width: 100px;" rowspan="2">
+                                            部局专项经费
+                                        </th>
+                                        <th style="width: 100px;" rowspan="2">
+                                            历年预算外结余
+                                        </th>
+                                        <th style="width: 100px;" rowspan="2">
+                                            历年预算经费结余
+                                        </th>
+                                        <th style="width: 100px;" rowspan="2">
+                                            留用租房维修基金
+                                        </th>
+                                        <th style="width: 100px;" rowspan="2">
+                                            留用党团费
+                                        </th>
+                                        <th style="width: 100px;" rowspan="2">
+                                            其他经费
+                                        </th>
+                                    </tr>
+                                    <tr role="row">
+                                        <th style="width: 100px;">
+                                            地方下达项目经费
+                                        </th>
+                                        <th style="width: 100px;">
+                                            部局下达项目经费
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr v-for="item in list">
+                                        <td>{{item.code}}</td>
+                                        <td>{{item.name}}</td>
+                                        <td>{{item.total}}</td>
+                                        <td>{{item.total1}}</td>
+                                        <td>{{item.column1}}</td>
+                                        <td>{{item.column21}}</td>
+                                        <td>{{item.column22}}</td>
+                                        <td>{{item.total3}}</td>
+                                        <td>{{item.column31}}</td>
+                                        <td>{{item.column32}}</td>
+                                        <td>{{item.column33}}</td>
+                                        <td>{{item.column34}}</td>
+                                        <td>{{item.column35}}</td>
+                                        <td>{{item.column36}}</td>
+                                        <td>{{item.column37}}</td>
+                                        <td>{{item.total4}}</td>
+                                        <td>{{item.column41}}</td>
+                                        <td>{{item.column42}}</td>
+                                        <td>{{item.column43}}</td>
+                                        <td>{{item.column44}}</td>
+                                        <td>{{item.column45}}</td>
+                                        <td>{{item.column46}}</td>
+                                        <td>{{item.column47}}</td>
+                                        <td>{{item.column5}}</td>
+                                        <td>
+                                            <button type="button" class="btn btn-default" data-dismiss="modal" v-on:click="showDetails(item)"> <i class="fa    fa-file-text-o"></i> 明细</button>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        </div>
                 </div>
             </div>
         </div>
