完成财务模块的检查

--- a/TAF.Web/Views/BudgetOutlay/_BudgetOutlayIndex3.cshtml
+++ b/TAF.Web/Views/BudgetOutlay/_BudgetOutlayIndex3.cshtml
@@ -108,7 +108,7 @@
                                     对下供应
                                 </th>
 
-                                <th style="width: 200px;" rowspan="2" rowspan="2">
+                                <th style="width: 200px;" rowspan="2" >
                                     直接支出
                                 </th>
                             </tr>
